k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-server
spec:
  type: NodePort
  selector:
    app: golang-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
