k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - provaholded.com
    secretName: tls-secret
  rules:
  - host: provaholded.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: golang-server
            port:
              number: 80
